--- a/src/CSS/style.scss
+++ b/src/CSS/style.scss
@@ -33,8 +33,8 @@ $color: #0d4690;
 $hover: #ffffff;
 
 header {
-  background-color: #ffffffa2;
-  backdrop-filter: blur(2px);
+  background-color: transparent;
+  backdrop-filter: saturate(180%) blur(10px);
   border: 1px solid white;
   width: 100%;
   padding: 6px 20px;
@@ -200,3 +200,6 @@ header {
     right: 40px;
   }
 }
+
+
+
